--- a/case-studies-en.html
+++ b/case-studies-en.html
@@ -16,7 +16,7 @@
                 <li><a href="services-en.html">Services</a></li>
                 <li><a href="case-studies-en.html">Case Studies</a></li>
                 <li><a href="testimonials-en.html">Client Testimonials</a></li>
-                <li><a href="contact-en.html">Contact Us</a></li>
+                <li><a href="contact-us-en.html">Contact Us</a></li>
             </ul>
             <!-- Language Switcher -->
             <div class="language-switcher">
