--- a/contact-us-ar.html
+++ b/contact-us-ar.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>اتصل بنا - شركة الشجرة المباركة للتعليم والاستثمار</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -56,7 +56,7 @@
             <h2>أين تجدنا</h2>
             <p>استخدم الخريطة أدناه لتحديد موقع مكاتبنا.</p>
             <!-- Placeholder for Google Map -->
-            <div class="map-placeholder">الخريطة هنا</div>
+            <div class="map-placeholder"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3383.9074322768015!2d35.869227574843364!3d31.990524747005487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sjo!4v1727507256343!5m2!1sen!2sjo" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
         </section>
     </main>
 
