--- a/contact-us-en.html
+++ b/contact-us-en.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Blessed Tree Education and Investment</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -28,7 +28,8 @@
             <h2>Get In Touch</h2>
             <p>If you have any inquiries, please feel free to contact us through the form below or reach out to us directly.</p>
 
-            <form action="contact-form-handler.php" method="POST">
+            <!-- Updated form with class -->
+            <form action="contact-form-handler.php" method="POST" class="contact-form">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
 
@@ -45,7 +46,7 @@
             </form>
         </section>
 
-        <section>
+        <section class="contact-info">
             <h2>Contact Information</h2>
             <p><strong>Address:</strong> Amman, Jordan</p>
             <p><strong>Phone:</strong> +962-6-1234567</p>
@@ -56,7 +57,7 @@
             <h2>Find Us</h2>
             <p>Use the map below to locate our offices.</p>
             <!-- Placeholder for Google Map -->
-            <div class="map-placeholder">Google Map Here</div>
+            <div class="map-placeholder"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3383.9074322768015!2d35.869227574843364!3d31.990524747005487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sjo!4v1727507256343!5m2!1sen!2sjo" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
         </section>
     </main>
 
