--- a/testimonials-ar.html
+++ b/testimonials-ar.html
@@ -16,7 +16,7 @@
                 <li><a href="services-ar.html">خدماتنا</a></li>
                 <li><a href="case-studies-ar.html">دراسات حالة</a></li>
                 <li><a href="testimonials-ar.html">آراء العملاء</a></li>
-                <li><a href="contact-ar.html">اتصل بنا</a></li>
+                <li><a href="contact-us-ar.html">اتصل بنا</a></li>
             </ul>
             <!-- Language Switcher -->
             <div class="language-switcher">
